# control-led

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  frame.yaml  layer.yaml  palette_frame.yaml  test_frame.txt
custom/glow/: Chroma.cpp  Chroma.h  Grid.cpp  Grid.h  HSVColor.h  catalog.cpp
data/catalog/: double-scan.yaml  double-scanner.yaml  rainbow-diagonal.yaml  rainbow-horizontal.yaml  rainbow-vertical.yaml  spotlight.yaml
data/chromas/: brick-canary.yaml  shamrock-to-yellow.yaml  shamrock.yaml  sunset-yellow.yaml  wild strawberry .yaml
data/frames/: AAA_Spotlight.yaml  Black_and_White.yaml  Scan_Double.yaml  rainbow-diagonal.yaml  rainbow-horizontal.yaml  rainbow-vertical.yaml  sky blue scan.yaml  split_in_two.yaml  spotlight.yaml  test.yaml
data/grids/: bottom-left-diagonal.yaml  bottom-left-vertical.yaml  bottom-right-diagonal.yaml  bottom-right-horizontal.yaml  bottom-right-vertical.yaml  top-left-diagonal.yaml  top-left-horizontal.yaml  top-left-vertical.yaml
data/layers/: antique brass scan.yaml  black-scan.yaml  brick-canary.yaml  brick.yaml  denim-scan.yaml  layer.yaml  shamrock scan.yaml  shamrock-to-yellow.yaml  sky blue.yaml  split1.yaml  split31.yaml  split32.yaml  split33.yaml  strawberry.yaml  sunset scan.yaml  sunset.yaml  white-scan.yaml  wild strawberry-scan.yaml
glow-play/: CMakeLists.txt  play.cpp
player/: CMakeLists copy.txt  CMakeLists.txt  player.cpp
src/: Chroma.cpp  Chroma.h  Crayons.cpp  Crayons.h  DisplayANSI.h  Filer.cpp  Filer.h  Frame.cpp  Frame.h  GlowConfig.h  Grid.cpp  Grid.h  HSVColor.cpp  HSVColor.h  HostLight.h  Layer.cpp  Layer.h  Library.cpp  Library.h  Palette.cpp  Palette.h  PaletteColor.cpp  PaletteColor.h  Pivot.cpp  Pivot.h  RGBColor.cpp  RGBColor.h  Storyboard.h  ansi_stream.cpp  ansi_stream.h  base.h  build_catalog.cpp  build_catalog.h  glow.cpp  glow_file.cpp  glow_file.h  glow_show.cpp  glow_show.h  palette_builder.cpp  palette_builder.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  catalog.cpp  catalog.h  check_chroma_detail.h  check_frame_detail.h  check_grid_detail.h  check_hsvcolor_detail.h  check_layer_detail.h  check_palette_detail.h  check_rgbcolor_detail.h  cmake_install.cmake  frame.yaml  frame.yml  frame_references.yaml  library.cpp  library.h  palette.yaml  test_build_crayons.cpp  test_build_palette.cpp  test_catalog.cpp  test_chroma.cpp  test_filer.cpp  test_frame.cpp  test_frame.yml.h  test_frame_references.yml.h  test_frame_symbolic.yml.h  test_gen.cpp  test_generated_catalog.cpp  test_generated_library.cpp  test_grid.cpp  test_hsvcolor.cpp  test_json.cpp  test_layer.cpp  test_library.cpp  test_light.cpp  test_yaml.h
test_data/catalog/: salmon-strawberry.yaml  sky blue scan.yaml  split_in_three.yaml  strawberry.yaml
test_data/chromas/: chroma.yaml
test_data/chromas/custom/: chroma.yaml
test_data/chromas/derived/: chroma.yaml  effect.yml.yaml
test_data/frames/: double-scanner.yaml  frame.yaml  salmon-strawberry.yaml
test_data/frames/custom/: frame.yaml  salmon-strawberry.yaml
test_data/frames/derived/: frame.yaml  salmon-strawberry.yaml
test_data/grids/: bottom-left-horizontal.yaml  top-right-diagonal.yaml  top-right-horizontal.yaml  top-right-vertical.yaml
test_data/layers/: layer.yaml  salmon scan.yaml  shamrock.yaml  split2.yaml
test_data/layers/custom/: layer.yaml  salmon.yaml  strawberry.yaml
test_data/layers/derived/: layer.yaml  strawberry.yaml
test_data/layers/symbols/: layer_symbolic.yaml  strawberry.yaml
